令和6年3回目の結果を記録、その他用語を追加

--- a/html/r6_result.html
+++ b/html/r6_result.html
@@ -70,7 +70,7 @@
               <th class="p-1">問1</th>
               <td class="p-1"><a href="terms.html#h_AS">AS</a></td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -88,7 +88,7 @@
               <th class="p-1">問2</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -106,7 +106,7 @@
               <th class="p-1">問3</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -127,7 +127,7 @@
                 <a href="terms.html#h_OSPF">OSPF</a>
               </td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -153,7 +153,11 @@
                   >スパニングツリー<br />プロトコル</a
                 >
               </td>
-              <td class="p-1">-</td>
+              <td class="p-1">
+                <a href="terms.html#h_スパニングツリープロトコル"
+                  >スパニングツリー<br />プロトコル</a
+                >
+              </td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -171,7 +175,7 @@
               <th class="p-1">問6</th>
               <td class="p-1"><a href="terms.html#h_ICMPv6">ICMPv6</a></td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -193,7 +197,7 @@
                 >
               </td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -211,7 +215,7 @@
               <th class="p-1">問8</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -232,7 +236,7 @@
                 <a href="terms.html#h_確認応答番号">確認応答番号</a>
               </td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -250,7 +254,7 @@
               <th class="p-1">問10</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -268,7 +272,7 @@
               <th class="p-1">問11</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -286,7 +290,9 @@
               <th class="p-1">問12</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">
+                <a href="terms.html#h_ホストアドレス">ホスト<br />アドレス</a>
+              </td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -304,7 +310,7 @@
               <th class="p-1">問13</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -325,7 +331,7 @@
                 <a href="terms.html#h_OSPF">OSPF</a>
               </td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -343,7 +349,7 @@
               <th class="p-1">問15</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -361,7 +367,7 @@
               <th class="p-1">問16</th>
               <td class="p-1"><a href="terms.html#h_CDN">CDN</a></td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -379,7 +385,7 @@
               <th class="p-1">問17</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -397,7 +403,7 @@
               <th class="p-1">問18</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -415,7 +421,7 @@
               <th class="p-1">問19</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1"><a href="terms.html#h_DMARC">DMARC</a></td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -433,7 +439,7 @@
               <th class="p-1">問20</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -451,7 +457,7 @@
               <th class="p-1">問21</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -471,7 +477,7 @@
                 <a href="terms.html#h_PCIExpress">PCI Express</a>
               </td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -489,7 +495,7 @@
               <th class="p-1">問23</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -519,13 +525,12 @@
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
-              <td class="p-1">-</td>
             </tr>
             <tr>
               <th class="p-1">問25</th>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">-</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
@@ -543,7 +548,7 @@
               <th class="p-1">正解率</th>
               <td class="p-1">64%</td>
               <td class="p-1 text-success">92%</td>
-              <td class="p-1">-</td>
+              <td class="p-1 text-success">92%</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
               <td class="p-1">-</td>
