--- a/index.html
+++ b/index.html
@@ -286,7 +286,11 @@
             </tr>
             <tr>
               <th class="p-1">問12</th>
-              <td class="p-1">⚪︎</td>
+              <td class="p-1">
+                <a href="html/terms.html#h_ホストアドレス"
+                  >ホスト<br />アドレス</a
+                >
+              </td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1"><a href="html/terms.html#h_MQTT">MQTT</a></td>
@@ -420,7 +424,7 @@
             </tr>
             <tr>
               <th class="p-1">問19</th>
-              <td class="p-1"><a href="html/terms.html#h_DMARC">DMARC</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
